--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <title>:: Projeto Trybewarts ::</title>
 </head>
 <body>
-  <header class="header"></header>
+  <header class="header">
+    <img src="images/trybewarts-header-logo.svg" alt="" class="trybewarts-header-logo">
+  </header>
 </body>
 </html>
