--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
   <main>
     
     <form action="" id="evaluation-form" method="GET">
-      <input type="text" maxlength="30" placeholder="Nome">
-      <input type="text" maxlength="30" placeholder="Sobrenome">
-      <input type="email" placeholder="Email">
+      <input type="text" maxlength="30" placeholder="Nome" id='input-name'>
+      <input type="text" maxlength="30" placeholder="Sobrenome" id='input-lastname'>
+      <input type="email" placeholder="Email" id='input-email'>
       <select name="" id=""></select>
     </form>
 
