--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Trybewarts</title>
   <link rel="stylesheet" href="style.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 
 <body>
@@ -34,13 +33,13 @@
       
       <div id='input-email-and-house'>
       <input type="email" placeholder="Email" id='input-email'>
-      <select name="casa" id="casa"> <!--Requisito 9-->
+      <select name="casa" id="house"> <!--Requisito 9-->
         <option value="Gitnória" id='gitnoria-house'>Gitnória</option>
         <option value="Reactpuff" id='reactpuff-house'>Reactpuff</option>
         <option value="Corvinode" id='corvinode-house'>Corvinode</option>
         <option value="Pytherina" id='pytherina-house'>Pytherina</option>
       </select> <!--/Requisito 9-->
-      </div> <!--/Requisito 10-->
+      </div> <!--/Requisito 11-->
     </form>
 
     <img src="images/trybewarts-colored.svg" alt="" id="trybewarts-forms-logo">
