--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Trybewarts</title>
   <link rel="stylesheet" href="style.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 
 <body>
@@ -41,6 +40,16 @@
         <option value="Pytherina" id='pytherina-house'>Pytherina</option>
       </select> <!--/Requisito 9-->
       </div> <!--/Requisito 10-->
+
+      <!--/Requisito 13-->
+      <label id="label-content">Qual conteúdo você está com mais vontade de aprender?</label>
+        <label for="hoFs"><input type="checkbox" id="label-content" value="HoFs">HoFs</label>
+        <label for="Jest"><input type="checkbox" id="label-content" value="Jest">Jest</label>
+        <label for="promises"><input type="checkbox" id="label-content" value="Promises">Promises</label>
+        <label for="react"><input type="checkbox" id="label-content" value="React">React</label>
+        <label for="sql"><input type="checkbox" id="label-content" value="SQL">SQL</label>
+        <label for="python"><input type="checkbox" id="label-content" value="Python">Python</label>
+        
     </form>
 
     <img src="images/trybewarts-colored.svg" alt="" id="trybewarts-forms-logo">
