--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
 </head>
 <body>
   <header class="header">
-    <img src="images/trybewarts-header-logo.svg" alt="" class="trybewarts-header-logo">
+    <img src="images/trybewarts-header-logo.svg" alt="Trybewarts Logo" class="trybewarts-header-logo">
+    <form class="trybewarts-login" action="">
+      <input type="text" name="Login" id="login-nome" placeholder="Login">
+      <input type="password" name="Senha" id="login-senha" placeholder="Senha">
+      <button type="button" id="login-submit">Login</button>
+    </form>
   </header>
 </body>
 </html>
