--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
   <header class="header">
     <img src="images/trybewarts-header-logo.svg" alt="Trybewarts Logo" class="trybewarts-header-logo">
+    <h1 id="trybewarts-header-title">Trybewarts</h1>
     <form class="trybewarts-login" action="">
       <input type="text" name="Login" id="login-nome" placeholder="Login">
       <input type="password" name="Senha" id="login-senha" placeholder="Senha">
