--- a/index.html
+++ b/index.html
@@ -18,5 +18,8 @@
       <button type="button" id="login-submit">Login</button>
     </form>
   </header>
+  <main>
+    <form id="evaluation-form" action=""></form>
+  </main>
 </body>
 </html>
