--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
   </header>
   <main>
     <form id="evaluation-form" action=""></form>
+    <section>
+      <img src="images/trybewarts-colored.svg" alt="Trybewarts form logo" id="trybewarts-forms-logo">
+    </section>
   </main>
 </body>
 </html>
