--- a/index.html
+++ b/index.html
@@ -84,19 +84,17 @@
 
       <!--Requisito 15-->
       <label class="textarea" >Deixe seu comentário:</label>
-      <textarea id="textarea" cols="30" rows="10" maxlength="500"></textarea>
-    </form>
+      <textarea id="textarea" cols="30" rows="10" maxlength="500" ></textarea>
 
-    <!--Requisito 16-->
-    <label for="" id="label-infos"><input type="checkbox" name="" id="agreement">Você concorda com o uso das informações acima?</label>
+       <!--Requisito 16-->
+      <label for="" id="label-infos"><input type="checkbox" name="" id="agreement" value='FALSE'>Você concorda com o uso das informações acima?</label>
     
-
-    <!--Requisito 17-->
-    <button type="submit" id="submit-btn">Enviar</button>
-
+      <!--Requisito 17-->
+      <button type="submit" disabled id="submit-btn">Enviar</button>
+    </form>
     <img src="images/trybewarts-colored.svg" alt="" id="trybewarts-forms-logo">
-
   </main>
+  <footer>Direitos reservados à Trybewarts©</footer>
   <script src="script.js"></script>
 </body>
 
