--- a/index.html
+++ b/index.html
@@ -19,7 +19,24 @@
     </form>
   </header>
   <main>
-    <form id="evaluation-form" action=""></form>
+    <form id="evaluation-form" action="">
+      <label for="input-name">
+        <input type="text" placeholder="Nome" id="input-name">
+      </label>
+      <label for="input-lastname">
+        <input type="text" placeholder="Sobrenome" id="input-lastname">
+      </label>
+      <label for="input-email">
+        <input type="text" placeholder="Email" id="input-email">
+      </label>
+      <p>Casa</p>
+      <select name="casas" id="house">
+        <option value="Gitnória" id="gitnoria-house">Gitnória</option>
+        <option value="Reactpuff" id="reactpuff-house">Reactpuff</option>
+        <option value="Corvinode" id="corvinode-house">Corvinode</option>
+        <option value="Pytherina" id="pytherina-house">Pytherina</option>
+      </select>
+    </form>
     <section>
       <img src="images/trybewarts-colored.svg" alt="Trybewarts form logo" id="trybewarts-forms-logo">
     </section>
