--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </header>
   <!-- Corpo Com Form e Logo -->
   <main class="row">
-      <form action="">
+      <form action="" method="GET" id="evaluation-form">
         <div>
             
         </div>
