--- a/index.html
+++ b/index.html
@@ -8,15 +8,13 @@
     <body>
         <header class="header">
             <img src="images/trybewarts-header-logo.svg" class="trybewarts-header-logo" alt="">
+						<h1 id="trybewarts-header-title">Trybewarts</h1>
             <form class="trybewarts-login">
-                <fieldset>
-                    <legend>Login</legend>
-                    <label for="">Email</label>
-                    <input id="email" type="email" name='email'>
-                    <label for="">Senha</label>
-                    <input id="password" type="password" name='password'>
+                <div>                            
+                    <input id="email" type="email" name='email' placeholder="Login">                   
+                    <input id="password" type="password" name='password' placeholder="Senha">
                     <button id="button" type="submit">Enviar</button>
-                </fieldset>
+									</div>   
             </form>
         </header>
 
