--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 									</div>   
             </form>
         </header>
-
+				<main class="main">
+					<form id='evaluation-form'></form>
+				</main>
         <script src="script.js"></script>
     </body>
 </html>
