Adiciona os requisitos 1 ao 4

--- a/index.html
+++ b/index.html
@@ -14,18 +14,19 @@
 
 <body>
   <!-- Cabeçalho -->
-  <header>
-    <img src="images/trybewarts-header-logo.svg" alt="">
-    
+  <header class="header">
+    <img class="trybewarts-header-logo pure-img" src="images/trybewarts-header-logo.svg" alt="logo da trybe warts"
+      id="header-logo">
+    <h1 id="trybewarts-header-title">Trybewarts</h1>
+    <div class="forms">
+      <form method="GET" action="" class="trybewarts-login pure-form">
+        <input placeholder="Login" type="email" name="log-in-email" id="log-in-email">
+        <input placeholder="Senha" type="password" name="log-in-password" id="log-in-password">
+        <button type="submit" id="log-button" class="pure-button pure-button-primary">Entre</button>
+      </form>
+    </div>
   </header>
   <!-- Corpo Com Form e Logo -->
-  <main class="row">
-      <form action="" method="GET" id="evaluation-form">
-        <div>
-            
-        </div>
-      </form>
-  </main>
   <!-- Form -->
   <!-- STRING -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
