--- a/index.html
+++ b/index.html
@@ -1,35 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/purecss@2.0.6/build/pure-min.css"
+      integrity="sha384-Uu6IeWbM+gzNVXJcM9XV3SohHtmWE+3VGi496jvgX1jyvDTXfdK+rfZc8C1Aehk5"
+      crossorigin="anonymous"
+    />    
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <title>Document</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.6/build/pure-min.css"
-    integrity="sha384-Uu6IeWbM+gzNVXJcM9XV3SohHtmWE+3VGi496jvgX1jyvDTXfdK+rfZc8C1Aehk5" crossorigin="anonymous">
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-  <title>Document</title>
-</head>
+  <body>
+    <!-- Cabeçalho -->
+    <header>
+      <img src="images/trybewarts-header-logo.svg" alt="" />
+    </header>
+    <!-- Corpo Com Form e Logo -->
+    <main class="row">
+      <div>
+        <form action="" method="GET" id="evaluation-form">
+          <label for="input-name">Nome</label>
+          <input type="text" name="name" id="input-name" placeholder="Nome" />
 
-<body>
-  <!-- Cabeçalho -->
-  <header>
-    <img src="images/trybewarts-header-logo.svg" alt="">
-    
-  </header>
-  <!-- Corpo Com Form e Logo -->
-  <main class="row">
-      <form action="" method="GET" id="evaluation-form">
-        <div>
-            
-        </div>
-      </form>
-  </main>
-  <!-- Form -->
-  <!-- STRING -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-  <script src="script.js"></script> 
-</body>
+          <label for="input-lastname">Sobrenome</label>
+          <input type="text" name="lastName" id="input-lastname" placeholder="Sobrenome"/>
 
+          <label for="input-email">Email</label>
+          <input type="email" name="name" id="input-email" placeholder="Email" />
+        </form>
+      </div>
+
+      <div>
+        <img src="images/trybewarts-colored.svg" id="trybewarts-forms-logo" />
+      </div>
+
+    </main>
+    <!-- Form -->
+    <!-- STRING -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="script.js"></script>
+  </body>
 </html>
