--- a/index.html
+++ b/index.html
@@ -10,8 +10,22 @@
 <body>
     <header id="header">
 <img class="trybewarts-header-logo" src="images/trybewarts-header-logo.svg">
+<h1 id="trybewarts-header-title">Trybewarts</h1>
+<form id="trybewarts-login">
+    <button id="login-btn">Login</button>
+    <input type="text" placeholder="Login" class = "login-input"></input>
+    <input type="password" placeholder="Senha" class = "login-input"></input>
+</form>
+</header> 
+<main>
+  <form id="evaluation-form">
+    <label for="">  </label>
+<input type="text" >  
+
+  </form>
+  <img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg">
+</main>
 
 
-</header>
   </body>
 </html>
