--- a/index.html
+++ b/index.html
@@ -13,14 +13,24 @@
 <h1 id="trybewarts-header-title">Trybewarts</h1>
 <form id="trybewarts-login">
     <button id="login-btn">Login</button>
-    <input type="text" placeholder="Login" class = "login-input"></input>
-    <input type="password" placeholder="Senha" class = "login-input"></input>
+    <input type="text" placeholder="Login" id ="login-input"></input>
+    <input type="password" placeholder="Senha" id = "pass-input"></input>
 </form>
 </header> 
 <main>
   <form id="evaluation-form">
-    <label for="">  </label>
-<input type="text" >  
+    <label for="input-name"> Nome </label>
+<input id="input-name" type="text" placeholder="Nome" >  
+<label for="input-lastname"> Sobrenome </label>
+<input id="input-lastname" type="text" placeholder="Sobrenome">  
+<label for="input-email"> E-mail </label>
+<input id="input-email" type="text" placeholder="E-mail">  
+<select id="house">
+  <option id="gitnoria-house" value="Gitnória">Gitnória</option>
+  <option id="reactpuff-house" value="Reactpuff">Reactpuff</option>
+  <option id="corvinode-house" value="Corvinode">Corvinode</option>
+  <option id="pytherina-house" value="Pytherina">Pytherina</option>
+</select>
 
   </form>
   <img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg">
