adiciona requisito 2 Adicione o logotipo da Trybewarts

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 	<header class="header">
-
+		<img class="trybewarts-header-logo" src="images/trybewarts-header-logo.svg" alt="">
 	</header>
 
 </body>
