adiciona requisito 3 formulário de autenticação

--- a/index.html
+++ b/index.html
@@ -12,8 +12,13 @@
 <body>
 	<header class="header">
 		<img class="trybewarts-header-logo" src="images/trybewarts-header-logo.svg" alt="">
+		<form class="trybewarts-login" action="">
+			<input id="nomeDeUsuario" type="text" placeholder="Login">
+			<input id="senhaDeUsuario" type="password" placeholder="Senha">
+			<button id="login">login</button>
+		</form>
 	</header>
-
+<script src="script.js"></script>
 </body>
 
 </html>
