adiciona requisito 4 título com o texto Trybewarts

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
 <body>
 	<header class="header">
-		<img class="trybewarts-header-logo" src="images/trybewarts-header-logo.svg" alt="">
+		<img class="trybewarts-header-logo" src="images/trybewarts-header-logo.svg" alt="logo da traybe">
+		<h1 id="trybewarts-header-title">Trybewarts</h1>
 		<form class="trybewarts-login" action="">
 			<input id="nomeDeUsuario" type="text" placeholder="Login">
 			<input id="senhaDeUsuario" type="password" placeholder="Senha">
