--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
 			<button id="login">login</button>
 		</form>
 	</header>
+	<main>
+		<form id="evaluation-form" action="">
+			
+		</form>
+	</main>
 <script src="script.js"></script>
 </body>
 
