--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 	<header class="header">
-		<img class="trybewarts-header-logo" src="images/trybewarts-header-logo.svg" alt="logo da traybe">
+		<img id="trybewarts-forms-logo" class="trybewarts-header-logo" src="images/trybewarts-header-logo.svg" alt="logo da traybe">
 		<h1 id="trybewarts-header-title">Trybewarts</h1>
 		<form class="trybewarts-login" action="">
 			<input id="nomeDeUsuario" type="text" placeholder="Login">
@@ -21,7 +21,7 @@
 	</header>
 	<main>
 		<form id="evaluation-form" action="">
-			
+
 		</form>
 	</main>
 <script src="script.js"></script>
