adiciona requisito 7 logo da Trybewarts no lado direito da página

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 	<header class="header">
-		<img id="trybewarts-forms-logo" class="trybewarts-header-logo" src="images/trybewarts-header-logo.svg" alt="logo da traybe">
+		<img class="trybewarts-header-logo" src="images/trybewarts-header-logo.svg" alt="logo da traybe">
 		<h1 id="trybewarts-header-title">Trybewarts</h1>
 		<form class="trybewarts-login" action="">
 			<input id="nomeDeUsuario" type="text" placeholder="Login">
@@ -23,6 +23,7 @@
 		<form id="evaluation-form" action="">
 
 		</form>
+		<img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg" alt="">
 	</main>
 <script src="script.js"></script>
 </body>
