adiciona requisito 8 acrescenta inputs no forms

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 	</header>
 	<main>
 		<form id="evaluation-form" action="">
-
+			<input id="input-name" type="text" placeholder="Nome">
+			<input id="input-lastname" type="text" placeholder="Sobrenome">
+			<input id="input-email" type="email" placeholder="Email">
 		</form>
 		<img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg" alt="">
 	</main>
