Adiciona até o requisito 4

--- a/index.html
+++ b/index.html
@@ -13,6 +13,19 @@
 </head>
 
 <body>
+  <!-- Cabeçalho -->
+  <header class="header">
+    <img class="trybewarts-header-logo" src="images/trybewarts-header-logo.svg" alt="logo da trybe warts"
+      id="header-logo" />
+    <h1 id="trybewarts-header-title">Trybewarts</h1>
+    <div class="row">
+      <form method="GET" action="" class="trybewarts-login col s12 forms">
+        <input placeholder="Login" type="email" name="log-in-email" id="log-in-email" class="col s4" />
+        <input placeholder="Senha" type="password" name="log-in-password" id="log-in-password" class="col s4"/>
+        <button type="submit" id="log-button" class="col s4 waves-effect waves-light btn">Entre</button>
+      </form>
+    </div>
+  </header>
   <!-- Script -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <script src="script.js"></script>
