adiciona requisito 9 Crie um select 'Casa'

--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
 			<input id="input-name" type="text" placeholder="Nome">
 			<input id="input-lastname" type="text" placeholder="Sobrenome">
 			<input id="input-email" type="email" placeholder="Email">
+			<select name="select" id="house">
+				<option id="gitnoria-house" value="Gitnória">Gitnória</option>
+				<option id="reactpuff-house" value="Reactpuff">Reactpuff</option>
+				<option id="corvinode-house" value="Corvinode">Corvinode</option>
+				<option id="pytherina-house" value="Pytherina">Pytherina</option>
+			</select>
 		</form>
 		<img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg" alt="">
 	</main>
