adiciona requisito 10 Alinhe os campos de 'Nome' e 'Sobrenome'

--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
 	</header>
 	<main>
 		<form id="evaluation-form" action="">
+			<div>
 			<input id="input-name" type="text" placeholder="Nome">
 			<input id="input-lastname" type="text" placeholder="Sobrenome">
+			</div>
 			<input id="input-email" type="email" placeholder="Email">
 			<select name="select" id="house">
 				<option id="gitnoria-house" value="Gitnória">Gitnória</option>
