adiciona requisito 11 Alinhe os campos de 'Email' e 'Casa'

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 			<input id="input-name" type="text" placeholder="Nome">
 			<input id="input-lastname" type="text" placeholder="Sobrenome">
 			</div>
+			<div>
 			<input id="input-email" type="email" placeholder="Email">
 			<select name="select" id="house">
 				<option id="gitnoria-house" value="Gitnória">Gitnória</option>
@@ -32,6 +33,7 @@
 				<option id="corvinode-house" value="Corvinode">Corvinode</option>
 				<option id="pytherina-house" value="Pytherina">Pytherina</option>
 			</select>
+		</div>
 		</form>
 		<img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg" alt="">
 	</main>
