corrigi lint:styles linha 41

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 	<header class="header">
-		<img class="trybewarts-header-logo" src="images/trybewarts-header-logo.svg" alt="logo da traybe">
+		<img class="trybewarts-header-logo" src="images/trybewarts-header-logo.svg" alt="logo da trybewarts">
 		<h1 id="trybewarts-header-title">Trybewarts</h1>
 		<form class="trybewarts-login" action="">
 			<input id="nomeDeUsuario" type="text" placeholder="Login">
@@ -22,22 +22,22 @@
 	<main>
 		<form id="evaluation-form" action="">
 			<div>
-			<input id="input-name" type="text" placeholder="Nome">
-			<input id="input-lastname" type="text" placeholder="Sobrenome">
+				<input id="input-name" type="text" placeholder="Nome">
+				<input id="input-lastname" type="text" placeholder="Sobrenome">
 			</div>
 			<div>
-			<input id="input-email" type="email" placeholder="Email">
-			<select name="select" id="house">
-				<option id="gitnoria-house" value="Gitnória">Gitnória</option>
-				<option id="reactpuff-house" value="Reactpuff">Reactpuff</option>
-				<option id="corvinode-house" value="Corvinode">Corvinode</option>
-				<option id="pytherina-house" value="Pytherina">Pytherina</option>
-			</select>
-		</div>
+				<input id="input-email" type="email" placeholder="Email">
+				<select name="select" id="house">
+					<option id="gitnoria-house" value="Gitnória">Gitnória</option>
+					<option id="reactpuff-house" value="Reactpuff">Reactpuff</option>
+					<option id="corvinode-house" value="Corvinode">Corvinode</option>
+					<option id="pytherina-house" value="Pytherina">Pytherina</option>
+				</select>
+			</div>
 		</form>
-		<img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg" alt="">
+		<img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg" alt="imagem da da trybewarts">
 	</main>
-<script src="script.js"></script>
+	<script src="script.js"></script>
 </body>
 
 </html>
