--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <header class="header">
     <img src="images/trybewarts-header-logo.svg" alt="logo" srcset="" class="trybewarts-header-logo">
     <form action="" class="trybewarts-login">
-      <input placeholder="e-mail" type="email" name="login" id="login">
-      <input type="password" name="password" id="password">
-      <button id="btn-login" type="submit"></button>
+      <input placeholder="Login" type="email" name="login" id="login">
+      <input placeholder="Senha" type="password" name="password" id="password">
+      <button id="btn-login" type="submit">Login</button>
     </form>
   </header>
   <script src="script.js"></script>
