--- a/index.html
+++ b/index.html
@@ -73,6 +73,21 @@
         </div>
       </div>
       <hr>
+      <section id="labelRate">
+      <label for="" id="label-rate">
+        <p>Como você avalia a Trybewarts?</p>
+      </label>
+        <input type="radio" name="rate" value="1">1
+        <input type="radio" name="rate" value="2">2
+        <input type="radio" name="rate" value="3">3
+        <input type="radio" name="rate" value="4">4
+        <input type="radio" name="rate" value="5">5
+        <input type="radio" name="rate" value="6">6
+        <input type="radio" name="rate" value="7">7
+        <input type="radio" name="rate" value="8">8
+        <input type="radio" name="rate" value="9">9
+        <input type="radio" name="rate" value="10">10
+      </section>
     </form>
     <aside> 
       <img src="images/trybewarts-colored.svg" alt="Trybewarts form logo" id="trybewarts-forms-logo">
