--- a/index.html
+++ b/index.html
@@ -73,6 +73,29 @@
         </div>
       </div>
       <hr>
+      <div class="row">
+        <label for="rate" id="label-rate">Como você avalia a Trybewarts?</label>
+        <input type="radio" name="rate" id="rate-1" value="1">
+        <label for="rate-1">1</label>
+        <input type="radio" name="rate" id="rate-2" value="2">
+        <label for="rate-1">2</label>
+        <input type="radio" name="rate" id="rate-3" value="3">
+        <label for="rate-1">3</label>
+        <input type="radio" name="rate" id="rate-4" value="4">
+        <label for="rate-1">4</label>
+        <input type="radio" name="rate" id="rate-5" value="5">
+        <label for="rate-1">5</label>
+        <input type="radio" name="rate" id="rate-6" value="6">
+        <label for="rate-1">6</label>
+        <input type="radio" name="rate" id="rate-7" value="7">
+        <label for="rate-1">7</label>
+        <input type="radio" name="rate" id="rate-8" value="8">
+        <label for="rate-1">8</label>
+        <input type="radio" name="rate" id="rate-9" value="9">
+        <label for="rate-1">9</label>
+        <input type="radio" name="rate" id="rate-10" value="10">
+        <label for="rate-1">10</label>
+      </div>
     </form>
     <aside> 
       <img src="images/trybewarts-colored.svg" alt="Trybewarts form logo" id="trybewarts-forms-logo">
