--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,6 +10,7 @@
   <script src="script.js"></script>
   <title>:: Projeto Trybewarts ::</title>
 </head>
+
 <body>
   <header class="header">
     <img src="images/trybewarts-header-logo.svg" alt="Trybewarts Logo" class="trybewarts-header-logo">
@@ -74,9 +76,9 @@
       </div>
       <hr>
       <section id="labelRate">
-      <label for="" id="label-rate">
-        <p>Como você avalia a Trybewarts?</p>
-      </label>
+        <label for="" id="label-rate">
+          <p>Como você avalia a Trybewarts?</p>
+        </label>
         <input type="radio" name="rate" value="1">1
         <input type="radio" name="rate" value="2">2
         <input type="radio" name="rate" value="3">3
@@ -88,10 +90,15 @@
         <input type="radio" name="rate" value="9">9
         <input type="radio" name="rate" value="10">10
       </section>
+        <label for="textarea" class="textarea">
+          <p>Deixe seu comentário:</p>
+          <textarea name="textarea" id="textarea" cols="30" rows="3" maxlength="500"></textarea>
+        </label>
     </form>
-    <aside> 
+    <aside>
       <img src="images/trybewarts-colored.svg" alt="Trybewarts form logo" id="trybewarts-forms-logo">
     </aside>
   </main>
 </body>
+
 </html>
