--- a/index.html
+++ b/index.html
@@ -90,10 +90,14 @@
         <input type="radio" name="rate" value="9">9
         <input type="radio" name="rate" value="10">10
       </section>
-        <label for="textarea" class="textarea">
-          <p>Deixe seu comentário:</p>
-          <textarea name="textarea" id="textarea" cols="30" rows="3" maxlength="500"></textarea>
-        </label>
+      <label for="textarea" class="textarea">
+        <p>Deixe seu comentário:</p>
+        <textarea name="textarea" id="textarea" cols="30" rows="3" maxlength="500"></textarea>
+      </label>
+      <div>
+        <label for="agreement" id="label-infos"> Você concorda com o uso das informações acima? </label>
+        <input type="checkbox" name="" id="agreement">
+      </div>
     </form>
     <aside>
       <img src="images/trybewarts-colored.svg" alt="Trybewarts form logo" id="trybewarts-forms-logo">
