--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
         <label for="agreement" id="label-infos"> Você concorda com o uso das informações acima? </label>
         <input type="checkbox" name="" id="agreement">
       </div>
+      <button type="submit" id="submit-btn">Enviar</button>
     </form>
     <aside>
       <img src="images/trybewarts-colored.svg" alt="Trybewarts form logo" id="trybewarts-forms-logo">
