adiciona requisito 13 Crie campos de entrada do tipo 'checkbox'

--- a/index.html
+++ b/index.html
@@ -34,13 +34,35 @@
 					<option id="pytherina-house" value="Pytherina">Pytherina</option>
 				</select>
 				<section>
-					<label id="label-family" for="">Qual sua família?</label>
 					<div class="item-flex-input-radio">
-						<input type="radio" name="family" value="Frontend">
-						<input type="radio" name="family" value="Backend">
-						<input type="radio" name="family" value="FullStack">
+						<label id="label-family" for="">Qual sua família?</label><br>
+						<input  id="fro" type="radio" name="family" value="Frontend">
+						<label for="fro">Frontend</label><br>
+						<input id="back" type="radio" name="family" value="Backend">
+						<label for="back">Backend</label><br>
+						<input id="full" type="radio" name="family" value="FullStack">
+						<label for="full">FullStack</label><br>
 					</div>
+					<div>
+						<label id="label-content" for="">Qual conteúdo você está com mais vontade de aprender?</label><br>
+						<input id="hoFs" type="checkbox" value="HoFs">
+						<label for="hoFs">hoFs</label>
 
+						<input id="Jest" type="checkbox" value="Jest">
+						<label for="Jest">Jest</label>
+
+						<input id="Promises" type="checkbox" value="Promises">
+						<label for="Promises">Promises</label><br>
+
+						<input id="React" type="checkbox" value="React">
+						<label for="React">React</label>
+
+						<input id="SQL" type="checkbox" value="SQL">
+						<label for="SQL">SQL</label>
+
+						<input id="Python" type="checkbox" value="Python">
+						<label for="Python">Python</label>
+					</div>
 				</section>
 			</div>
 		</form>
